--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">Teacher ERP</string>
 
+    <string name="nav_open">Open</string>
+    <string name="nav_close">Close</string>
+
     <string-array name="periods">
         <item>Select Period</item>
         <item>1</item>
@@ -12,7 +15,7 @@
         <item>7</item>
         <item>8</item>
     </string-array>
-    
+
     <string-array name="branches">
         <item>Select Branch</item>
     </string-array>
@@ -24,4 +27,13 @@
     <string-array name="course">
         <item>Select Course</item>
     </string-array>
+    <string name="title_activity_add_teacher_subject">AddTeacherSubject</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
